--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "change-case": "^5.4.4",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
